==> tqf-888/86_djysrc/bsp/cpudrv/stm32/h7/src/uart/cpu_peri_uart.c <==
#include <stdbool.h>
#include <stdint.h>
#include <stdio.h>
#include <string.h>
#include <errno.h>
#include <systime.h>
#include "cpu_peri.h"
#include <device/djy_uart.h>
#include "int.h"
#include "djyos.h"
#include "cpu_peri_uart.h"
#include "cpu_peri_int_line.h"
#include "stdlib.h"
#include "project_config.h"     //本文件由IDE中配置界面生成，存放在APP的工程目录中。
#define CFG_MODULE_ENABLE_CPU_ONCHIP_UART    false //如果勾选了本组件，将由DIDE在project_config.h或命令行中定义为true
#define CFG_UART1_SENDBUF_LEN       64      //"UART1发送环形缓冲区大小",
#define CFG_UART1_RECVBUF_LEN       64      //"UART1接收环形缓冲区大小",
#define CFG_UART1_DMABUF_LEN        64      //"UART1 DMA环形缓冲区大小",
#define CFG_UART2_SENDBUF_LEN       64      //"UART2发送环形缓冲区大小",
#define CFG_UART2_RECVBUF_LEN       64      //"UART2接收环形缓冲区大小",
#define CFG_UART2_DMABUF_LEN        64      //"UART2 DMA环形缓冲区大小",
#define CFG_UART3_SENDBUF_LEN       64      //"UART3发送环形缓冲区大小",
#define CFG_UART3_RECVBUF_LEN       64      //"UART3接收环形缓冲区大小",
#define CFG_UART3_DMABUF_LEN        1024      //"UART3 DMA环形缓冲区大小",
#define CFG_UART4_SENDBUF_LEN       64      //"UART4发送环形缓冲区大小",
#define CFG_UART4_RECVBUF_LEN       64      //"UART4接收环形缓冲区大小",
#define CFG_UART4_DMABUF_LEN        64      //"UART4 DMA环形缓冲区大小",
#define CFG_UART5_SENDBUF_LEN       64      //"UART5发送环形缓冲区大小",
#define CFG_UART5_RECVBUF_LEN       64      //"UART5接收环形缓冲区大小",
#define CFG_UART5_DMABUF_LEN        64      //"UART5 DMA环形缓冲区大小",
#define CFG_UART6_SENDBUF_LEN       64      //"UART6发送环形缓冲区大小",

void __UART_RxIntEnable(u8 flag,u8 port)
{
    if(flag == CN_DMA_USED)
        Int_RestoreAsynLine(UartDmaRxInt[port]);
    else
        tg_UART_Reg[port]->CR1 |= (1<<5);//中断使能
}

void __UART_RxIntDisable(u8 flag, u8 port)
{
    if(flag == CN_DMA_USED)
        Int_SaveAsynLine(UartDmaRxInt[port]);
    else
        tg_UART_Reg[port]->CR1 &= ~(1<<5);
}

static void __UART_TxIntEnable(u8 flag,u8 port)
{
    if(flag == CN_DMA_USED)
        Int_RestoreAsynLine(UartDmaTxInt[port]);
    else
        tg_UART_Reg[port]->CR1 |= USART_CR1_TXEIE_TXFNFIE;
}

static void __UART_TxIntDisable(u8 flag, u8 port)
{
    if(flag == CN_DMA_USED)
        Int_SaveAsynLine(UartDmaTxInt[port]);
    else
        tg_UART_Reg[port]->CR1 &= ~USART_CR1_TXEIE_TXFNFIE;//禁止发送空中断
}

static bool_t __UART_TxTranEmpty(tagUartReg volatile *reg)
{
    return ((reg->ISR & USART_ISR_TXE_TXFNF) !=0);
}

static void __UART_BaudSet(tagUartReg volatile *Reg,u32 port,u32 baud)
{
    u32 mantissa,fraction;
    float temp;
    if((port == CN_UART1) || (port == CN_UART6))
    {
        temp = (float)CN_CFG_PCLK2/(16*baud);
        mantissa = temp;
        fraction = (temp - mantissa)*16;
    }
    else
    {
        temp = (float)CN_CFG_PCLK1/(16*baud);
        mantissa = temp;
        fraction = (temp - mantissa)*16;
    }

    Reg->BRR =  ((u16)mantissa<<4)+(u16)fraction;

    if(TxDirectPort == port)
    {
        TxByteTime = 11000000/baud;     //1个字节传输时间，按10bit，+10%计算
    }
}

static void __UART_ComConfig(tagUartReg volatile *Reg,u32 port,struct COMParam *COM)
{
    if((COM == NULL) || (Reg == NULL))
        return;
    __UART_BaudSet(Reg,port,COM->BaudRate);

    Reg->CR1 &= ~(1);//禁止串口
    switch(COM->DataBits)               // data bits
    {
        case CN_UART_DATABITS_7:
            switch(COM->Parity)
            {
                case CN_UART_PARITY_NONE:
                    Reg->CR1 |= (1<<28);//数据效验共7位禁止奇偶效验
                    Reg->CR1 &= ~(1<<12);

                    Reg->CR1 &= ~(1<<10);
                    break;//奇效验

                case CN_UART_PARITY_ODD:
                    Reg->CR1 &= ~(1<<28);//数据效验共8位奇偶效验
                    Reg->CR1 &= ~(1<<12);

                    Reg->CR1 |= (1<<9);
                    Reg->CR1 |= (1<<10);break;//奇效验

                case CN_UART_PARITY_EVEN:
                    Reg->CR1 &= ~(1<<28);//数据效验共8位奇偶效验
                    Reg->CR1 &= ~(1<<12);

                    Reg->CR1 &=~(1<<9);
                    Reg->CR1 |= (1<<10);break;
                default:break;
            }
            break;

        case CN_UART_DATABITS_8:
            switch(COM->Parity)        //
            {
                case CN_UART_PARITY_NONE:
                    Reg->CR1 &= ~(1<<28);//数据效验共8位禁止奇偶效验
                    Reg->CR1 &= ~(1<<12);
                    Reg->CR1 &= ~(1<<10);
                    break;

                case CN_UART_PARITY_ODD:
                    Reg->CR1 &= ~(1<<28);//数据效验共9位奇偶效验
                    Reg->CR1 |= (1<<12);

                    Reg->CR1 |= (1<<9);
                    Reg->CR1 |= (1<<10);
                    break;//奇效验
                case CN_UART_PARITY_EVEN:
                    Reg->CR1 &= ~(1<<28);//数据效验共9位奇偶效验
                    Reg->CR1 |= (1<<12);

                    Reg->CR1 &=~(1<<9);
                    Reg->CR1 |= (1<<10);break;
                default:break;
            }
        break;

        case CN_UART_DATABITS_9:
            Reg->CR1 &= ~(1<<28);
            Reg->CR1 |= (1<<12);
            switch(COM->Parity)        //
            {
                case CN_UART_PARITY_NONE:
                    Reg->CR1 &= ~(1<<28);//数据效验共9位禁止奇偶效验
                    Reg->CR1 |= (1<<12);
                    Reg->CR1 &= ~(1<<10);
                    break;
                case CN_UART_PARITY_ODD:break;//不支持这种请情况
                case CN_UART_PARITY_EVEN:break;
                default:break;
            }
            break;
        default:break;
    }

    switch(COM->StopBits)  //todu:F7的 0.5个停止位没有写进来
    {
//        Reg->CR2 &= ~(3<<12);
//      case CN_UART_STOPBITS_0_5;  Reg->CR2 |= (1<<12);break;
        case CN_UART_STOPBITS_1:    Reg->CR2 |= (0<<12);break;
        case CN_UART_STOPBITS_1_5:  Reg->CR2 |= (3<<12);break;
        case CN_UART_STOPBITS_2:    Reg->CR2 |= (2<<12);break;
        default:break;
    }
    Reg->CR1 |= (1);//使能串口
}

void __UART_Enable(u32 port)
{
    switch(port)
    {//使能串口1时钟
        case CN_UART1:
            __HAL_RCC_USART1_CLK_ENABLE();break;
        case CN_UART2:
            __HAL_RCC_USART2_CLK_ENABLE();break;
        case CN_UART3:
            __HAL_RCC_USART3_CLK_ENABLE();break;
        case CN_UART4:
            __HAL_RCC_UART4_CLK_ENABLE();break;
        case CN_UART5:
            __HAL_RCC_UART5_CLK_ENABLE();break;
        case CN_UART6:
            __HAL_RCC_USART6_CLK_ENABLE();break;
        case CN_UART7:
            __HAL_RCC_UART7_CLK_ENABLE();break;
        case CN_UART8:
            __HAL_RCC_UART8_CLK_ENABLE();break;
        case CN_UART9:
            __HAL_RCC_UART9_CLK_ENABLE();break;
        case CN_UART10:
            __HAL_RCC_USART10_CLK_ENABLE();break;
        default:
            break;
    }
    tg_UART_Reg[port]->CR1 |= (1<<13);
}

void __UART_Disable(u32 port)
{
    switch(port)
    {
        case CN_UART1:  __HAL_RCC_USART1_CLK_DISABLE();  break;
        case CN_UART2:  __HAL_RCC_USART2_CLK_DISABLE(); break;
        case CN_UART3:  __HAL_RCC_USART3_CLK_DISABLE(); break;
        case CN_UART4:  __HAL_RCC_UART4_CLK_DISABLE(); break;
        case CN_UART5:  __HAL_RCC_UART5_CLK_DISABLE(); break;
        case CN_UART6:  __HAL_RCC_USART6_CLK_DISABLE();  break;
        case CN_UART7:  __HAL_RCC_UART7_CLK_DISABLE(); break;
        case CN_UART8:  __HAL_RCC_UART8_CLK_DISABLE(); break;
        case CN_UART9:  __HAL_RCC_UART9_CLK_DISABLE(); break;
        case CN_UART10:  __HAL_RCC_USART10_CLK_DISABLE(); break;
        default:break;
    }
    tg_UART_Reg[port]->CR1 &= ~(1);
}

static void __UART_IntInit(u32 SerialNo)
{
    u8 IntLine;
    switch (SerialNo)
    {
        case CN_UART1:
                    IntLine = CN_INT_LINE_USART1;break;
        case CN_UART2:
                    IntLine = CN_INT_LINE_USART2;break;
        case CN_UART3:
                    IntLine = CN_INT_LINE_USART3;break;
        case CN_UART4:
                    IntLine = CN_INT_LINE_UART4; break;
        case CN_UART5:
                    IntLine = CN_INT_LINE_UART5; break;
        case CN_UART6:
                    IntLine = CN_INT_LINE_USART6;break;
        case CN_UART7:
                    IntLine = CN_INT_LINE_UART7; break;
        case CN_UART8:
                    IntLine = CN_INT_LINE_UART8; break;
        case CN_UART9:
                    IntLine = CN_INT_LINE_UART9; break;
        case CN_UART10:
                    IntLine = CN_INT_LINE_USART10; break;
                default:
                    return;
    }
    Int_Register(IntLine);
    Int_SetClearType(IntLine,CN_INT_CLEAR_AUTO);
    Int_IsrConnect(IntLine,UART_ISR);
    Int_SettoAsynSignal(IntLine);
    Int_ClearLine(IntLine);
    Int_RestoreAsynLine(IntLine);
    Int_SetIsrPara(IntLine,SerialNo);
}

static void __UART_HardInit(u8 SerialNo)
{
    if(SerialNo > CN_UART_NUM)
        return;
    __UART_ClkConfig(SerialNo);
    //系统初始化时已经使中断处于禁止状态，无需再禁止和清除中断。
   //初始化uart硬件控制数据结构
    tg_UART_Reg[SerialNo]->CR1 = 0;
    tg_UART_Reg[SerialNo]->CR3 = USART_CR3_ONEBIT | UART_TXFIFO_THRESHOLD_7_8
                                | UART_RXFIFO_THRESHOLD_1_2     // | USART_CR3_TXFTIE
                                | USART_CR3_RXFTIE;
    tg_UART_Reg[SerialNo]->CR2 = 0x0;
    //  tg_UART_Reg[SerialNo]->CR1 = 0x202d;
    tg_UART_Reg[SerialNo]->CR1 = USART_CR1_UE | USART_CR1_RE | USART_CR1_TE
                                | USART_CR1_MME    //| USART_CR1_RXNEIE_RXFNEIE
                                | USART_CR1_IDLEIE | USART_CR1_FIFOEN
                                | USART_CR1_TXFEIE | USART_CR1_RXFFIE
                                | USART_CR1_TCIE;
    __UART_BaudSet(tg_UART_Reg[SerialNo],SerialNo,115200);
    tg_UART_Reg[SerialNo]->ICR |= 0x40;
}

static ptu32_t __UART_Ctrl(tagUartReg *Reg,u32 cmd, va_list *arg0)
{
    ptu32_t result = 0;
    u32 port;

    if(Reg == NULL)
        return 0;

    switch((u32)Reg)
    {
    case CN_UART1_BASE: port = CN_UART1;break;
    case CN_UART2_BASE: port = CN_UART2;break;
    case CN_UART3_BASE: port = CN_UART3;break;
    case CN_UART4_BASE: port = CN_UART4;break;
    case CN_UART5_BASE: port = CN_UART5;break;
    case CN_UART6_BASE: port = CN_UART6;break;
    case CN_UART7_BASE: port = CN_UART7;break;
    case CN_UART8_BASE: port = CN_UART8;break;
    case CN_UART9_BASE: port = CN_UART9;break;
    case CN_UART10_BASE: port = CN_UART10;break;
    default:return 0;
    }

    switch(cmd)
    {
        case CN_DEV_CTRL_START:
            __UART_Enable(port);
            break;
        case CN_DEV_CTRL_STOP:
            __UART_Disable(port);
            break;

        case CN_DEV_CTRL_SHUTDOWN:
            break;
        case CN_DEV_CTRL_SLEEP:
            break;
        case CN_DEV_CTRL_RESUME:
            break;
        case CN_UART_SET_BAUD:  //设置Baud
        {
            u32 baud = va_arg(*arg0, u32);
             __UART_BaudSet(Reg,port, baud);
            break;
        }
        case CN_UART_EN_RTS:
            Reg->CR3 |= 0x100;
            break;
        case CN_UART_DIS_RTS:
            Reg->CR3 &= ~0x100;
            break;
        case CN_UART_EN_CTS:
            Reg->CR3 |= 0x200;
            break;
        case CN_UART_DIS_CTS:
            Reg->CR3 &= ~0x200;
            break;
        case CN_UART_DMA_USED:
            __UART_SetDmaUsed(port);
            break;
        case CN_UART_DMA_UNUSED:
            __UART_SetDmaUnUsed(port);
            break;
        case CN_UART_COM_SET:
        {
            struct COMParam *COM = va_arg(*arg0, struct COMParam *);
            __UART_ComConfig(Reg,port,COM);
            break;
        }
        default: break;
    }
    return result;
}

u32 UART_ISR(ptu32_t port)
{
    struct UartGeneralCB *UCB;
    tagUartReg *Reg;
    u32 num,loop;
    u8 ch;
    u8 fifobuf[20];

    UCB = pUartCB[port];
    Reg = (tagUartReg *)tg_UART_Reg[port];


    if(((Reg->ISR & USART_ISR_RXFF) && (Reg->CR1 & USART_CR1_RXFFIE))   // rx fifo full
        || ((Reg->ISR & USART_ISR_RXFT) && (Reg->CR3 & USART_CR3_RXFTIE))  //rx fifo threshold
        || ((Reg->ISR & USART_ISR_IDLE) && (Reg->CR1 & USART_CR1_IDLEIE))) //idle
    {
        if(s_UART_DmaUsed[port] && (Reg->ISR & USART_ISR_IDLE))
            Int_TapLine(UartDmaRxInt[port]);
        else
        {
            num = 0;
            while ((Reg->ISR & USART_ISR_RXNE_RXFNE) && (num < 20))
            {
                fifobuf[num] = (u8)Reg->RDR;
                num++;
            }
            if(num != 0)
            {
                num = UART_PortWrite(UCB,fifobuf,num);
                if(num != 1)
                {
                    UART_ErrHandle(UCB,CN_UART_BUF_OVER_ERR);
                }
            }
        }
        Reg->ICR = USART_ICR_IDLECF;  //清 USART_ISR_IDLE
    }

    if(//((Reg->ISR & USART_ISR_TXFT) && (Reg->CR3 & USART_CR3_TXFTIE))   //tx fifo threshold
        ((Reg->ISR & USART_ISR_TXFE) && (Reg->CR1 & USART_CR1_TXFEIE)))  //tx fifo empty
    {
        num = UART_PortRead(UCB,fifobuf,14);    //fifo size is 16,threshold be set to 2
        Reg->ICR = USART_ICR_TXFECF;    //这句话清不了发送fifo空中断，不知为何
        if(num == 0)
        {
            Reg->CR1 &= ~USART_CR1_TXFEIE;  //因清不了，故发完后禁止掉它，
            Reg->CR1 |= USART_CR1_TCIE;     //使能发送完成中断
        }
        else
        {
            for(loop = 0; loop < num; loop++)
            {
                Reg->TDR = fifobuf[loop];
            }
        }
    }

//  if( (Reg->ISR & USART_ISR_RXNE_RXFNE) &&(Reg->CR1 & USART_CR1_RXNEIE_RXFNEIE))           //接收中断
//  {
//      ch = (u8)Reg->RDR;
//      num = UART_PortWrite(UCB,&ch,1);
//      if(num != 1)
//      {
//          UART_ErrHandle(UCB,CN_UART_BUF_OVER_ERR);
//      }
//  }
    if((Reg->ISR & USART_ISR_TC)&&(Reg->CR1 & USART_CR1_TCIE))//TC
    {
        Reg->CR1 &=~USART_CR1_TCIE;    //关TC中断
        Board_UartHalfDuplexRecv(port);     //不管是DMA还是中断传输，发送完了数据后都走这里，进入接收状态
    }

    if((Reg->ISR & USART_ISR_TXE_TXFNF)&&(Reg->CR1 & USART_CR1_TXEIE_TXFNFIE)  )    //发送中断
    {
        num = UART_PortRead(UCB,&ch,1);
        if(num != 0)
            Reg->TDR = ch;
        else
        {
            Reg->CR1 &= ~USART_CR1_TXEIE_TXFNFIE;        //txeie
            Reg->CR1 |= USART_CR1_TCIE;
        }
    }
    if(Reg->ISR & USART_ISR_ORE)        //ORE过载错误
    {
        ch = (u8)Reg->RDR;
        num = Reg->ISR;     //读一下sr寄存器
        UART_ErrHandle(UCB,CN_UART_FIFO_OVER_ERR);
        Reg->ICR |=USART_ICR_ORECF;//清过载标志位
    }
//  if((Reg->ISR & USART_ISR_IDLE) && (Reg->CR1 & USART_CR1_IDLEIE))
//  {
//      Reg->ICR |=USART_ICR_IDLECF;
//      UART_DmaRx_ISR(port);
//  }
    if(Reg->ISR & USART_ISR_FE)//帧错误直接清除暂时不做处理
    {
        Reg->ICR |= USART_ICR_FECF;
    }
    return 0;
}

s32 Uart_PutStrDirect(const char *str,u32 len)
{
    u32 result = 0;
    s32 timeout = TxByteTime * len;
    u16 CR_Bak;
    u8 port;
    for(port=0;port<CN_UART_NUM;port++)
    {
        if(PutStrDirectReg ==tg_UART_Reg[port])
            break;
    }
    Board_UartHalfDuplexSend(port);
    CR_Bak = PutStrDirectReg->CR1;                          //Save INT
    PutStrDirectReg->CR1 &= ~USART_CR1_TXEIE_TXFNFIE;                        //disable send INT
    for(result=0; result < len+1; result ++)
    {
        // 超时或者发送缓冲为空时退出
        while((false == __UART_TxTranEmpty(PutStrDirectReg))&& (timeout > 10))
        {
            timeout -=10;
            DJY_DelayUs(10);
        }
        if( (timeout <= 10) || (result == len))
            break;
        PutStrDirectReg->TDR = str[result];
    }
    PutStrDirectReg->CR1 = CR_Bak;                         //restore send INT
    while((PutStrDirectReg->ISR &USART_ISR_TC)!=USART_ISR_TC)
    {
        timeout -=10;
        DJY_DelayUs(10);
        if(timeout < 10)
           break;
    }
    Board_UartHalfDuplexRecv(port);
    return result;
}

char Uart_GetCharDirect(void)
{
    u16 CR_Bak;
    char result;

    CR_Bak = GetCharDirectReg->CR1;     //Save INT
    GetCharDirectReg->CR1 &= ~(USART_CR1_TXEIE_TXFNFIE); //disable send INT
    GetCharDirectReg->ICR |= USART_ICR_ORECF;    //清溢出错误标志：轮询接收有可能接收不及时产生溢出错误
    while(__UART_RxHadChar(GetCharDirectReg) == false)
        DJY_EventDelay(1000);

    result = GetCharDirectReg->RDR;
    PutStrDirectReg->CR1 = CR_Bak;                         //restore send INT
    return result;
}
